// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders caption applying style 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
        "textAlign": "left",
      },
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "System",
          "fontWeight": "400",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          Object {
            "color": "red",
            "fontSize": 20,
          },
        ],
        Array [
          Object {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          Object {
            "color": "red",
            "fontSize": 20,
          },
        ],
      ],
    ]
  }
>
  Big and red caption
</Text>
`;

exports[`renders caption with children as content 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
        "textAlign": "left",
      },
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontFamily": "System",
          "fontWeight": "400",
          "textAlign": "left",
          "writingDirection": "ltr",
        },
        Array [
          Object {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          undefined,
        ],
        Array [
          Object {
            "fontSize": 12,
            "letterSpacing": 0.4,
            "lineHeight": 20,
            "marginVertical": 2,
          },
          undefined,
        ],
      ],
    ]
  }
>
  Caption content
</Text>
`;
